--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "python.linting.enabled": true,
     "cSpell.words": [
         "configdef",
-        "FENIX"
+        "FENIX",
+        "gglsheet"
     ]
 }
